Outputs added for seq1,2,6,8,15,18

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Metric scaling implemented for ORBSLAM2 given static point to point correspondencies on subsequent image pairs.
+Metric scaling for ORBSLAM2 given static point to point correspondencies on subsequent image pairs.
